--- a/1_Download_Data.ipynb
+++ b/1_Download_Data.ipynb
@@ -85,7 +85,7 @@
     "### size: \n",
     "10.3GB\n",
     "### used in: \n",
-    "This file is necessary for $3\\_Preprocessing\\_of\\_Test\\_Data.ipynb$ where it is used to create a two test sets\n",
+    "This file is necessary for $3\\_Preprocessing\\_of\\_Test\\_Data.ipynb$ where it is used to create a two test sets. It is also used in $6\\_Error\\_Propagation.ipynb$ to calculate the scatter between the model predictions and ASPCAP labels in different regions of the label-space.\n",
     "### Notes:\n",
     "This file was created by pulling apStar combined spectra from the APOGEE v603.fits file. Instructions on dealing with apogee data can be found here: https://github.com/jobovy/apogee but this is not necessary for for the use of this notebook, as the files have already been created"
    ]
