--- a/2_Preprocessing_of_Training_Data.ipynb
+++ b/2_Preprocessing_of_Training_Data.ipynb
@@ -39,11 +39,11 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "filename = 'apStar_visits_main.h5'\n",
+    "filename = 'apStar_visits_main4.h5'\n",
     "f = h5py.File(filename,\"r\")"
    ]
   },
@@ -107,6 +107,7 @@
       "spectrum\n",
       "stacked_snr\n",
       "star_flag\n",
+      "star_flag_indiv\n",
       "targ1_flag\n",
       "targ2_flag\n",
       "visit_snr\n"
@@ -197,7 +198,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "64076 spectra remain from 22773 stars.\n"
+      "53548 spectra remain from 17001 stars.\n"
      ]
     }
    ],
@@ -219,7 +220,7 @@
    "source": [
     "## Select the first $num\\_train$ visits for the reference set (later to be split into training and cross-validation sets)\n",
     "### Default number reference spectra:\n",
-    "- num_ref = 50000"
+    "- num_ref = 44784"
    ]
   },
   {
@@ -233,12 +234,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reference set includes 50000 individual visit spectra from 17841 stars.\n"
+      "Reference set includes 44784 individual visit spectra from 14221 stars.\n"
      ]
     }
    ],
    "source": [
-    "num_ref = 50000\n",
+    "num_ref = 44784\n",
     "\n",
     "ap_id_train = ap_id[0:num_ref]\n",
     "spectra = spectra[0:num_ref]\n",
@@ -269,12 +270,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4932 stars to be processed for the High S/N test set.\n"
+      "2780 stars to be processed for the High S/N test set.\n"
      ]
     }
    ],
    "source": [
-    "ap_id_test = ap_id[50000:]\n",
+    "ap_id_test = ap_id[num_ref:]\n",
     "\n",
     "ap_id_test = list(set(ap_id_test)-set(ap_id_train))\n",
     "print(str(len(ap_id_test))+' stars to be processed for the High S/N test set.')"
@@ -345,7 +346,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reference spectra dataset now contains 50000 spectra, each with 7214 wavelength bins\n"
+      "Reference spectra dataset now contains 44784 spectra, each with 7214 wavelength bins\n"
      ]
     }
    ],
@@ -394,7 +395,7 @@
    "source": [
     "savename = 'training_data.h5'\n",
     "# if path already exist, you must remove it first using os.remove(path) \n",
-    "#os.remove(savename)\n",
+    "os.remove(savename)\n",
     "dt = h5py.special_dtype(vlen=bytes)\n",
     "with h5py.File(savename, \"a\") as f:\n",
     "     \n",
@@ -417,7 +418,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
