--- a/3_Preprocessing_of_Test_Data.ipynb
+++ b/3_Preprocessing_of_Test_Data.ipynb
@@ -284,7 +284,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "High S/N test set includes 3733 combined spectra\n"
+      "High S/N test set includes 2780 combined spectra\n"
      ]
     }
    ],
@@ -342,7 +342,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "High S/N spectra dataset now contains 3733 spectra, each with 7214 wavelength bins\n"
+      "High S/N spectra dataset now contains 2780 spectra, each with 7214 wavelength bins\n"
      ]
     }
    ],
@@ -388,7 +388,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "High S/N error spectra dataset now contains 3733 error spectra, each with 7214 wavelength bins\n"
+      "High S/N error spectra dataset now contains 2780 error spectra, each with 7214 wavelength bins\n"
      ]
     }
    ],
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
@@ -471,7 +471,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {
     "collapsed": true
    },
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -520,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
@@ -584,7 +584,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -628,7 +628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
@@ -671,7 +671,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": []
