--- a/4_Train_Model_Keras_1.ipynb
+++ b/4_Train_Model_Keras_1.ipynb
@@ -123,7 +123,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reference set includes 50000 individual visit spectra.\n"
+      "Reference set includes 44784 individual visit spectra.\n"
      ]
     }
    ],
@@ -165,7 +165,7 @@
     "This is done to randomize order for proper training\n",
     "The data is then split the reference set into training and cross-validation sets\n",
     "### Default:\n",
-    "- $num\\_train$ = 45000 spectra"
+    "- $num\\_train$ = 41000 spectra"
    ]
   },
   {
@@ -176,12 +176,12 @@
    },
    "outputs": [],
    "source": [
-    "num_train=45000"
+    "num_train=41000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -190,7 +190,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Training set includes 45000 spectra and the cross-validation set includes 5000 spectra\n"
+      "Training set includes 41000 spectra and the cross-validation set includes 3784 spectra\n"
      ]
     }
    ],
@@ -219,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -281,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -361,7 +361,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -390,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -399,81 +399,75 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 45000 samples, validate on 5000 samples\n",
+      "Train on 41000 samples, validate on 3784 samples\n",
       "Epoch 1/30\n",
-      "96s - loss: 0.0865 - val_loss: 0.0355\n",
+      "168s - loss: 0.1080 - val_loss: 0.0371\n",
       "Epoch 2/30\n",
-      "98s - loss: 0.0203 - val_loss: 0.0102\n",
+      "93s - loss: 0.0219 - val_loss: 0.0137\n",
       "Epoch 3/30\n",
-      "98s - loss: 0.0104 - val_loss: 0.0077\n",
+      "92s - loss: 0.0124 - val_loss: 0.0156\n",
       "Epoch 4/30\n",
-      "97s - loss: 0.0083 - val_loss: 0.0111\n",
+      "92s - loss: 0.0103 - val_loss: 0.0101\n",
       "Epoch 5/30\n",
-      "98s - loss: 0.0087 - val_loss: 0.0088\n",
+      "91s - loss: 0.0081 - val_loss: 0.0060\n",
       "Epoch 6/30\n",
-      "97s - loss: 0.0066 - val_loss: 0.0118\n",
+      "92s - loss: 0.0062 - val_loss: 0.0060\n",
       "Epoch 7/30\n",
-      "97s - loss: 0.0074 - val_loss: 0.0072\n",
+      "92s - loss: 0.0057 - val_loss: 0.0064\n",
       "Epoch 8/30\n",
-      "97s - loss: 0.0102 - val_loss: 0.0189\n",
+      "92s - loss: 0.0053 - val_loss: 0.0053\n",
       "Epoch 9/30\n",
-      "97s - loss: 0.0057 - val_loss: 0.0051\n",
+      "90s - loss: 0.0048 - val_loss: 0.0058\n",
       "Epoch 10/30\n",
-      "99s - loss: 0.0047 - val_loss: 0.0055\n",
+      "90s - loss: 0.0046 - val_loss: 0.0057\n",
       "Epoch 11/30\n",
-      "98s - loss: 0.0044 - val_loss: 0.0070\n",
+      "89s - loss: 0.0042 - val_loss: 0.0051\n",
       "Epoch 12/30\n",
-      "102s - loss: 0.0045 - val_loss: 0.0073\n",
+      "90s - loss: 0.0043 - val_loss: 0.0045\n",
       "Epoch 13/30\n",
-      "\n",
-      "Epoch 00012: reducing learning rate to 0.00034999998752.\n",
-      "99s - loss: 0.0042 - val_loss: 0.0063\n",
+      "89s - loss: 0.0040 - val_loss: 0.0049\n",
       "Epoch 14/30\n",
-      "98s - loss: 0.0033 - val_loss: 0.0045\n",
+      "\n",
+      "Epoch 00013: reducing learning rate to 0.00034999998752.\n",
+      "89s - loss: 0.0037 - val_loss: 0.0041\n",
       "Epoch 15/30\n",
-      "99s - loss: 0.0029 - val_loss: 0.0039\n",
+      "89s - loss: 0.0027 - val_loss: 0.0036\n",
       "Epoch 16/30\n",
-      "98s - loss: 0.0028 - val_loss: 0.0046\n",
+      "89s - loss: 0.0025 - val_loss: 0.0041\n",
       "Epoch 17/30\n",
-      "\n",
-      "Epoch 00016: reducing learning rate to 0.00017499999376.\n",
-      "98s - loss: 0.0028 - val_loss: 0.0045\n",
+      "89s - loss: 0.0025 - val_loss: 0.0038\n",
       "Epoch 18/30\n",
-      "99s - loss: 0.0023 - val_loss: 0.0038\n",
+      "\n",
+      "Epoch 00017: reducing learning rate to 0.00017499999376.\n",
+      "90s - loss: 0.0024 - val_loss: 0.0048\n",
       "Epoch 19/30\n",
-      "100s - loss: 0.0022 - val_loss: 0.0048\n",
+      "90s - loss: 0.0020 - val_loss: 0.0035\n",
       "Epoch 20/30\n",
-      "99s - loss: 0.0022 - val_loss: 0.0039\n",
+      "\n",
+      "Epoch 00019: reducing learning rate to 8.74999968801e-05.\n",
+      "90s - loss: 0.0019 - val_loss: 0.0033\n",
       "Epoch 21/30\n",
-      "\n",
-      "Epoch 00020: reducing learning rate to 8.74999968801e-05.\n",
-      "98s - loss: 0.0022 - val_loss: 0.0037\n",
+      "89s - loss: 0.0017 - val_loss: 0.0032\n",
       "Epoch 22/30\n",
-      "98s - loss: 0.0020 - val_loss: 0.0037\n",
+      "89s - loss: 0.0017 - val_loss: 0.0032\n",
       "Epoch 23/30\n",
-      "\n",
-      "Epoch 00022: reducing learning rate to 8e-05.\n",
-      "99s - loss: 0.0019 - val_loss: 0.0035\n",
+      "90s - loss: 0.0017 - val_loss: 0.0035\n",
       "Epoch 24/30\n",
-      "100s - loss: 0.0019 - val_loss: 0.0035\n",
+      "\n",
+      "Epoch 00023: reducing learning rate to 8e-05.\n",
+      "90s - loss: 0.0016 - val_loss: 0.0032\n",
       "Epoch 25/30\n",
-      "98s - loss: 0.0019 - val_loss: 0.0035\n",
-      "Epoch 26/30\n",
-      "98s - loss: 0.0018 - val_loss: 0.0035\n",
-      "Epoch 27/30\n",
-      "99s - loss: 0.0018 - val_loss: 0.0035\n",
-      "Epoch 28/30\n",
-      "98s - loss: 0.0018 - val_loss: 0.0036\n",
-      "Epoch 00027: early stopping\n"
+      "91s - loss: 0.0016 - val_loss: 0.0032\n",
+      "Epoch 00024: early stopping\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f574a827b50>"
+       "<keras.callbacks.History at 0x7f80e441cc10>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -493,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
