--- a/4_Train_Model_Keras_2.ipynb
+++ b/4_Train_Model_Keras_2.ipynb
@@ -28,17 +28,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using TensorFlow backend.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import random\n",
@@ -61,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -83,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -102,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -113,17 +107,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Reference set includes 50000 individual visit spectra.\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "with h5py.File(savename,\"r\") as F:\n",
     "    spectra = F[\"spectra\"][:]\n",
@@ -135,17 +123,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Each spectra contains 7214 wavelength bins\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "# define the number of wavelength bins (typicall 7214)\n",
     "num_fluxes = spectra.shape[1]\n",
@@ -160,33 +142,27 @@
     "This is done to randomize order for proper training\n",
     "The data is then split the reference set into training and cross-validation sets\n",
     "### Default:\n",
-    "- $num\\_train$ = 45000 spectra"
+    "- $num\\_train$ = 41000 spectra"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "num_train=45000"
+    "num_train=41000"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Training set includes 45000 spectra and the cross-validation set includes 5000 spectra\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "reference_data = np.column_stack((spectra,labels))\n",
     "np.random.shuffle(reference_data)\n",
@@ -212,8 +188,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# activation function used following every layer except for the output layers\n",
@@ -270,8 +248,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "model = Sequential([\n",
@@ -306,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -324,8 +304,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "optimizer = Adam(lr=lr, beta_1=beta_1, beta_2=beta_2, epsilon=optimizer_epsilon, decay=0.0)\n",
@@ -348,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -359,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -377,86 +359,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 45000 samples, validate on 5000 samples\n",
-      "Epoch 1/30\n",
-      "178s - loss: 0.0985 - val_loss: 0.0423\n",
-      "Epoch 2/30\n",
-      "172s - loss: 0.0146 - val_loss: 0.0176\n",
-      "Epoch 3/30\n",
-      "171s - loss: 0.0098 - val_loss: 0.0102\n",
-      "Epoch 4/30\n",
-      "171s - loss: 0.0088 - val_loss: 0.0074\n",
-      "Epoch 5/30\n",
-      "171s - loss: 0.0069 - val_loss: 0.0075\n",
-      "Epoch 6/30\n",
-      "170s - loss: 0.0073 - val_loss: 0.0072\n",
-      "Epoch 7/30\n",
-      "170s - loss: 0.0064 - val_loss: 0.0080\n",
-      "Epoch 8/30\n",
-      "170s - loss: 0.0057 - val_loss: 0.0069\n",
-      "Epoch 9/30\n",
-      "170s - loss: 0.0054 - val_loss: 0.0087\n",
-      "Epoch 10/30\n",
-      "170s - loss: 0.0048 - val_loss: 0.0066\n",
-      "Epoch 11/30\n",
-      "\n",
-      "Epoch 00010: reducing learning rate to 0.00034999998752.\n",
-      "170s - loss: 0.0049 - val_loss: 0.0057\n",
-      "Epoch 12/30\n",
-      "170s - loss: 0.0036 - val_loss: 0.0048\n",
-      "Epoch 13/30\n",
-      "170s - loss: 0.0033 - val_loss: 0.0058\n",
-      "Epoch 14/30\n",
-      "170s - loss: 0.0033 - val_loss: 0.0065\n",
-      "Epoch 15/30\n",
-      "\n",
-      "Epoch 00014: reducing learning rate to 0.00017499999376.\n",
-      "170s - loss: 0.0032 - val_loss: 0.0056\n",
-      "Epoch 16/30\n",
-      "169s - loss: 0.0027 - val_loss: 0.0039\n",
-      "Epoch 17/30\n",
-      "169s - loss: 0.0026 - val_loss: 0.0040\n",
-      "Epoch 18/30\n",
-      "170s - loss: 0.0026 - val_loss: 0.0052\n",
-      "Epoch 19/30\n",
-      "\n",
-      "Epoch 00018: reducing learning rate to 8.74999968801e-05.\n",
-      "174s - loss: 0.0026 - val_loss: 0.0040\n",
-      "Epoch 20/30\n",
-      "170s - loss: 0.0023 - val_loss: 0.0035\n",
-      "Epoch 21/30\n",
-      "\n",
-      "Epoch 00020: reducing learning rate to 8e-05.\n",
-      "168s - loss: 0.0023 - val_loss: 0.0036\n",
-      "Epoch 22/30\n",
-      "170s - loss: 0.0023 - val_loss: 0.0035\n",
-      "Epoch 23/30\n",
-      "165s - loss: 0.0022 - val_loss: 0.0035\n",
-      "Epoch 24/30\n",
-      "168s - loss: 0.0022 - val_loss: 0.0037\n",
-      "Epoch 25/30\n",
-      "170s - loss: 0.0022 - val_loss: 0.0035\n",
-      "Epoch 00024: early stopping\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7f83238bb750>"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "model.fit(train_spectra, train_labels, validation_data=(cv_spectra, cv_labels),\n",
     "          epochs=max_epochs, batch_size=batch_size, verbose=2,\n",
@@ -472,17 +379,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Model saved as Model_0\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
    "source": [
     "savename = 'Model_0'\n",
     "model.save(savename+'.h5')\n",
@@ -492,7 +393,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
