--- a/4_Train_Model_Keras_2.ipynb
+++ b/4_Train_Model_Keras_2.ipynb
@@ -294,7 +294,7 @@
    "source": [
     "# compile model\n",
     "## Default loss function:\n",
-    "## loss_function = mean squared errorearly_stopping_min_delta = 0.0001\n",
+    "early_stopping_min_delta = 0.0001\n",
     "early_stopping_patience = 4\n",
     "reduce_lr_factor = 0.5\n",
     "reuce_lr_epsilon = 0.0009\n",
