--- a/4_Train_Model_Keras_2.ipynb
+++ b/4_Train_Model_Keras_2.ipynb
@@ -50,7 +50,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load data for normalizing labels## Obtain data for normalizing labels"
+    "## Load data for normalizing labels"
    ]
   },
   {
