--- a/4_Train_Model_Keras_2_Simple.ipynb
+++ b/4_Train_Model_Keras_2_Simple.ipynb
@@ -52,7 +52,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Load data for normalizing labels## Obtain data for normalizing labels"
+    "## Load data for normalizing labels"
    ]
   },
   {
