--- a/6_Error_Propogation.ipynb
+++ b/6_Error_Propogation.ipynb
@@ -209,7 +209,7 @@
    },
    "outputs": [],
    "source": [
-    "savename = '/data/stars/teaghan/apStar_combined_main.h5'\n",
+    "savename = 'apStar_combined_main.h5'\n",
     "with h5py.File(savename,\"r\") as F:\n",
     "    all_apogee_spectra = F[\"spectrum\"][:]\n",
     "    all_apogee_labels = np.column_stack((F[\"TEFF\"][:],F[\"LOGG\"][:],F[\"FE_H\"][:]))"
