--- a/2_Preprocessing_of_Training_Data.ipynb
+++ b/2_Preprocessing_of_Training_Data.ipynb
@@ -43,7 +43,7 @@
    },
    "outputs": [],
    "source": [
-    "filename = 'apStar_visits_main4.h5'\n",
+    "filename = 'apStar_visits_main.h5'\n",
     "f = h5py.File(filename,\"r\")"
    ]
   },
